Update gitignore for Angular frontend